resolving conficts with updatiion