@@ -11,8 +11,7 @@
  */
 package com.infogain.automation.utilities;
 
-import java.math.BigDecimal;
-import java.math.RoundingMode;
+import java.text.DecimalFormat;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
@@ -49,75 +48,51 @@ public class AutomationRandomUtility {
                     76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 97, 98, 99, 100, 101, 102, 103, 104,
                     105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122};
 
-    public String generateRandomSpecialCharacter(int count, Character characterToGenerate) {
-
-
-        if (characterToGenerate != null) {
-            int asciiCode = characterToGenerate;
-            return RandomStringUtils.random(count, asciiCode, asciiCode + 1, false, false);
-        } else {
-            return generateRandomSpecialCharacter(count);
-        }
-
-    }
+    /*
+     * public String generateRandomSpecialCharacter(int count, Character characterToGenerate) { if (characterToGenerate
+     * != null) { int asciiCode = characterToGenerate; return RandomStringUtils.random(count, asciiCode, asciiCode + 1,
+     * false, false); } else { return generateRandomSpecialCharacter(count); } }
+     */
 
     public String generateRandomSpecialCharacter(int count) {
-
         return RandomStringUtils.random(count, 33, 48, false, false);
     }
 
-    public String generateRandomSpecialCharacter() {
-
-        return RandomStringUtils.random(random.nextInt(20), 33, 48, false, false);
-    }
-
-    public String generateRandomSpecialCharacters(int length, Character[] exclusions) {
-
-        List<Object> specialCharctersList = Arrays.asList(specialCharcters);
-        List<Integer> exclusionsAsciiCodes = new ArrayList<>();
-        for (int i = 0; i < exclusions.length; i++) {
-            exclusionsAsciiCodes.add((int) exclusions[i]);
-        }
-        specialCharctersList.removeAll(exclusionsAsciiCodes);
-        char[] specialCharactersAllowed = new char[specialCharctersList.size()];
-
-        for (int i = 0; i < specialCharactersAllowed.length; i++) {
-            specialCharactersAllowed[i] = (char) ((int) specialCharctersList.get(i));
-        }
+    public String generateRandomSpecialCharacters(int length, char[] exclusions) {
+        char[] specialCharactersAllowed = test(exclusions, specialCharcters);
         return RandomStringUtils.random(length, specialCharactersAllowed);
     }
 
-    public String generateRandomSpecialCharacters(Character[] exclusions) {
-
-        List<Object> specialCharctersList = Arrays.asList(specialCharcters);
-        List<Integer> exclusionsAsciiCodes = new ArrayList<>();
-        for (int i = 0; i < exclusions.length; i++) {
-            exclusionsAsciiCodes.add((int) exclusions[i]);
-        }
-        specialCharctersList.removeAll(exclusionsAsciiCodes);
-        char[] specialCharactersAllowed = new char[specialCharctersList.size()];
-
-        for (int i = 0; i < specialCharactersAllowed.length; i++) {
-            specialCharactersAllowed[i] = (char) ((int) specialCharctersList.get(i));
-        }
-        return RandomStringUtils.random(random.nextInt(20), specialCharactersAllowed);
-    }
-
-    public int generateRandomInt() {
-        return random.nextInt();
+    public long generateRandomInt() {
+        return random.nextLong();
     }
 
     public int generateRandomInt(int bound) {
         return random.nextInt(bound);
     }
 
-    public int generateRandomInt(int min, int max) {
+    public int generateRandomIntRange(int min, int max) {
         return random.ints(min, (max + 1)).limit(1).findFirst().getAsInt();
     }
 
-    public int generateRandomInt(int start, int end, int... exclude) {
-        int randomValue = start + random.nextInt(end - start + 1 - exclude.length);
+    public int generateRandomIntRangeWithExclusion(int start, int end, int... exclude) {
+        java.util.Arrays.sort(exclude);
+        int randomValue = 0;
+        try {
+            System.out.println(end);
+            System.out.println(start);
+            System.out.println(end - start + 1);
+            System.out.println(exclude.length);
+            randomValue = start + random
+                            .nextInt((end - start + 1) == 0 ? Integer.MAX_VALUE : end - start + 1 - exclude.length);
+        } catch (IllegalArgumentException illegalArgumentException) {
+            System.out.println(illegalArgumentException.getMessage());
+            throw new RandomGenerationAutomationException("Upper bound must be greater than lower bound");
+        }
         for (int ex : exclude) {
+            if (!(ex >= start && ex <= end)) {
+                throw new RandomGenerationAutomationException("Exclusions must be between specified range");
+            }
             if (randomValue < ex) {
                 break;
             }
@@ -126,51 +101,28 @@ public class AutomationRandomUtility {
         return randomValue;
     }
 
-    public String generateRandomStringSmallLetters() {
-        return RandomStringUtils.random(random.nextInt(20), 97, 123, true, false);
-
-    }
-
     public String generateRandomStringSmallLetters(int length) {
         return RandomStringUtils.random(length, 97, 123, true, false);
-
     }
 
-    public String generateRandomStringSmallLetters(int length, Character character) {
+    /*
+     * public String generateRandomStringSmallLetters(int length, Character character) { int ascii = character; if
+     * (ascii >= 97 || ascii < 123) { return RandomStringUtils.random(length, ascii, ascii + 1, true, false); } else {
+     * throw new RandomGenerationAutomationException("small characters ascii starts at 97 and ends at 123"); } }
+     */
 
-        int ascii = character;
-        if (ascii >= 97 || ascii < 123) {
-            return RandomStringUtils.random(length, ascii, ascii + 1, true, false);
-        } else {
-            throw new RandomGenerationAutomationException("small characters ascii starts at 97 and ends at 123");
-        }
-
-    }
-
-    public String generateRandomStringSmallLetters(int length, Character startCharacter, Character endCharacter) {
+    public String generateRandomStringSmallLettersRange(int length, Character startCharacter, Character endCharacter) {
         int startCharAscii = startCharacter;
         int endCharAscii = endCharacter;
-        if ((startCharAscii >= 97 || startCharAscii < 122) && (endCharAscii > 98 || endCharAscii <= 123)
-                        && endCharAscii > startCharAscii) {
+        if (startCharAscii <= endCharAscii) {
             return RandomStringUtils.random(length, startCharAscii, endCharAscii, true, false);
         } else {
-            throw new RandomGenerationAutomationException("small characters ascii starts at 97 and ends at 123");
+            throw new RandomGenerationAutomationException("Upper bound of range must be greater than lower bound");
         }
     }
 
-    public String generateRandomStringSmallLetters(int length, Character[] exclusions) {
-
-        List<Object> smallLettersList = Arrays.asList(smallLetters);
-        List<Integer> exclusionsAsciiCodes = new ArrayList<>();
-        for (int i = 0; i < exclusions.length; i++) {
-            exclusionsAsciiCodes.add((int) exclusions[i]);
-        }
-        smallLettersList.removeAll(exclusionsAsciiCodes);
-        char[] smallLettersAllowed = new char[smallLettersList.size()];
-
-        for (int i = 0; i < smallLettersAllowed.length; i++) {
-            smallLettersAllowed[i] = (char) ((int) smallLettersList.get(i));
-        }
+    public String generateRandomStringSmallLettersWithExclusion(int length, char[] exclusions) {
+        char[] smallLettersAllowed = test(exclusions, smallLetters);
         StringBuilder returnString = new StringBuilder();
         while (length != 0) {
             returnString.append(RandomStringUtils.random(1, smallLettersAllowed));
@@ -179,30 +131,8 @@ public class AutomationRandomUtility {
         return returnString.toString();
     }
 
-    public String generateRandomStringSmallLetters(Character[] exclusions) {
-
-        List<Object> smallLettersList = Arrays.asList(smallLetters);
-        List<Integer> exclusionsAsciiCodes = new ArrayList<>();
-        for (int i = 0; i < exclusions.length; i++) {
-            exclusionsAsciiCodes.add((int) exclusions[i]);
-        }
-        smallLettersList.removeAll(exclusionsAsciiCodes);
-        char[] smallLettersAllowed = new char[smallLettersList.size()];
-
-        for (int i = 0; i < smallLettersAllowed.length; i++) {
-            smallLettersAllowed[i] = (char) ((int) smallLettersList.get(i));
-        }
-        StringBuilder returnString = new StringBuilder();
-        int length = random.nextInt(20);
-        while (length != 0) {
-            returnString.append(RandomStringUtils.random(1, smallLettersAllowed));
-            length--;
-        }
-        return returnString.toString();
-    }
-
-    public String generateRandomStringSmallLetters(int length, Character startCharacter, Character endCharacter,
-                    Character[] exclusions) {
+    public String generateRandomStringSmallLettersRangeWithExclusion(int length, Character startCharacter,
+                    Character endCharacter, char[] exclusions) {
         List<Object> smallLettersInitialList = Arrays.asList(smallLetters);
         List<Object> smallLettersList = Arrays.asList(smallLetters);
         int startCharacterascii = ((int) ((char) startCharacter));
@@ -211,54 +141,16 @@ public class AutomationRandomUtility {
             int currentValue = (int) iterator.next();
 
             if (currentValue < startCharacterascii || currentValue > endCharacterascii) {
-                smallLettersList.remove(new Integer(currentValue));
+                smallLettersList.remove(Integer.valueOf(currentValue));
             }
 
         }
-        List<Integer> exclusionsAsciiCodes = new ArrayList<>();
-        for (int i = 0; i < exclusions.length; i++) {
-            exclusionsAsciiCodes.add((int) exclusions[i]);
+        int[] allowed = new int[smallLettersList.size()];
+        for (int i = 0; i < allowed.length; i++) {
+            allowed[i] = (Integer) smallLettersList.get(i);
         }
-        smallLettersList.removeAll(exclusionsAsciiCodes);
-        char[] smallLettersAllowed = new char[smallLettersList.size()];
-
-        for (int i = 0; i < smallLettersAllowed.length; i++) {
-            smallLettersAllowed[i] = (char) ((int) smallLettersList.get(i));
-        }
+        char[] smallLettersAllowed = test(exclusions, allowed);
         StringBuilder returnString = new StringBuilder();
-        while (length != 0) {
-            returnString.append(RandomStringUtils.random(1, smallLettersAllowed));
-            length--;
-        }
-        return returnString.toString();
-    }
-
-    public String generateRandomStringSmallLetters(Character startCharacter, Character endCharacter,
-                    Character[] exclusions) {
-        List<Object> smallLettersInitialList = Arrays.asList(smallLetters);
-        List<Object> smallLettersList = Arrays.asList(smallLetters);
-        int startCharacterascii = ((int) ((char) startCharacter));
-        int endCharacterascii = ((int) ((char) endCharacter));
-        for (Iterator iterator = smallLettersInitialList.iterator(); iterator.hasNext();) {
-            int currentValue = (int) iterator.next();
-
-            if (currentValue < startCharacterascii || currentValue > endCharacterascii) {
-                smallLettersList.remove(new Integer(currentValue));
-            }
-
-        }
-        List<Integer> exclusionsAsciiCodes = new ArrayList<>();
-        for (int i = 0; i < exclusions.length; i++) {
-            exclusionsAsciiCodes.add((int) exclusions[i]);
-        }
-        smallLettersList.removeAll(exclusionsAsciiCodes);
-        char[] smallLettersAllowed = new char[smallLettersList.size()];
-
-        for (int i = 0; i < smallLettersAllowed.length; i++) {
-            smallLettersAllowed[i] = (char) ((int) smallLettersList.get(i));
-        }
-        StringBuilder returnString = new StringBuilder();
-        int length = random.nextInt(20);
         while (length != 0) {
             returnString.append(RandomStringUtils.random(1, smallLettersAllowed));
             length--;
@@ -277,40 +169,28 @@ public class AutomationRandomUtility {
     }
 
     public String generateRandomStringCapitalLetters(int length, Character character) {
-
         int ascii = character;
         if (ascii <= 65 || ascii > 91) {
             return RandomStringUtils.random(length, ascii, ascii + 1, true, false);
         } else {
-            throw new RandomGenerationAutomationException("small characters ascii starts at 97 and ends at 123");
+            throw new RandomGenerationAutomationException("Upper bound of range must be greater than lower bound");
         }
 
     }
 
-    public String generateRandomStringCapitalLetters(int length, Character startCharacter, Character endCharacter) {
+    public String generateRandomStringCapitalLettersRange(int length, Character startCharacter,
+                    Character endCharacter) {
         int startCharAscii = startCharacter;
         int endCharAscii = endCharacter;
-        if ((startCharAscii <= 65 || startCharAscii > 91) && (endCharAscii < 92 || endCharAscii > 65)
-                        && endCharAscii > startCharAscii) {
+        if (startCharAscii <= endCharAscii) {
             return RandomStringUtils.random(length, startCharAscii, endCharAscii, true, false);
         } else {
-            throw new RandomGenerationAutomationException("small characters ascii starts at 97 and ends at 123");
+            throw new RandomGenerationAutomationException("Upper bound of range must be greater than lower bound");
         }
     }
 
-    public String generateRandomStringCapitalLetters(int length, Character[] exclusions) {
-
-        List<Object> capitalLettersList = Arrays.asList(capitalLetters);
-        List<Integer> exclusionsAsciiCodes = new ArrayList<>();
-        for (int i = 0; i < exclusions.length; i++) {
-            exclusionsAsciiCodes.add((int) exclusions[i]);
-        }
-        capitalLettersList.removeAll(exclusionsAsciiCodes);
-        char[] capitalLettersAllowed = new char[capitalLettersList.size()];
-
-        for (int i = 0; i < capitalLettersAllowed.length; i++) {
-            capitalLettersAllowed[i] = (char) ((int) capitalLettersList.get(i));
-        }
+    public String generateRandomStringCapitalLettersWithExclusion(int length, char[] exclusions) {
+        char[] capitalLettersAllowed = test(exclusions, capitalLetters);
         StringBuilder returnString = new StringBuilder();
         while (length != 0) {
             returnString.append(RandomStringUtils.random(1, capitalLettersAllowed));
@@ -319,21 +199,9 @@ public class AutomationRandomUtility {
         return returnString.toString();
     }
 
-    public String generateRandomStringCapitalLetters(Character[] exclusions) {
-
-        List<Object> capitalLettersList = Arrays.asList(capitalLetters);
-        List<Integer> exclusionsAsciiCodes = new ArrayList<>();
-        for (int i = 0; i < exclusions.length; i++) {
-            exclusionsAsciiCodes.add((int) exclusions[i]);
-        }
-        capitalLettersList.removeAll(exclusionsAsciiCodes);
-        char[] capitalLettersAllowed = new char[capitalLettersList.size()];
-
-        for (int i = 0; i < capitalLettersAllowed.length; i++) {
-            capitalLettersAllowed[i] = (char) ((int) capitalLettersList.get(i));
-        }
+    public String generateRandomStringSpecialCharacterWithExclusion(int length, char[] exclusions) {
+        char[] capitalLettersAllowed = test(exclusions, specialCharcters);
         StringBuilder returnString = new StringBuilder();
-        int length = random.nextInt(20);
         while (length != 0) {
             returnString.append(RandomStringUtils.random(1, capitalLettersAllowed));
             length--;
@@ -341,8 +209,18 @@ public class AutomationRandomUtility {
         return returnString.toString();
     }
 
-    public String generateRandomStringCapitalLetters(int length, Character startCharacter, Character endCharacter,
-                    Character[] exclusions) {
+    public String generateRandomNumericStringWithExclusions(int length, char[] exclusions) {
+        char[] numbersAllowed = test(exclusions, numbers);
+        StringBuilder returnString = new StringBuilder();
+        while (length != 0) {
+            returnString.append(RandomStringUtils.random(1, numbersAllowed));
+            length--;
+        }
+        return returnString.toString();
+    }
+
+    public String generateRandomStringCapitalLettersRangeWithExclusion(int length, Character startCharacter,
+                    Character endCharacter, char[] exclusions) {
         List<Object> capitalLettersInitialList = Arrays.asList(capitalLetters);
         List<Object> capitalLettersList = Arrays.asList(capitalLetters);
         int startCharacterascii = ((int) ((char) startCharacter));
@@ -351,54 +229,15 @@ public class AutomationRandomUtility {
             int currentValue = (int) iterator.next();
 
             if (currentValue < startCharacterascii || currentValue > endCharacterascii) {
-                capitalLettersList.remove(new Integer(currentValue));
+                capitalLettersList.remove(Integer.valueOf(currentValue));
             }
-
         }
-        List<Integer> exclusionsAsciiCodes = new ArrayList<>();
-        for (int i = 0; i < exclusions.length; i++) {
-            exclusionsAsciiCodes.add((int) exclusions[i]);
+        int[] allowed = new int[capitalLettersList.size()];
+        for (int i = 0; i < allowed.length; i++) {
+            allowed[i] = (Integer) capitalLettersList.get(i);
         }
-        capitalLettersList.removeAll(exclusionsAsciiCodes);
-        char[] capitalLettersAllowed = new char[capitalLettersList.size()];
-
-        for (int i = 0; i < capitalLettersAllowed.length; i++) {
-            capitalLettersAllowed[i] = (char) ((int) capitalLettersList.get(i));
-        }
+        char[] capitalLettersAllowed = test(exclusions, allowed);
         StringBuilder returnString = new StringBuilder();
-        while (length != 0) {
-            returnString.append(RandomStringUtils.random(1, capitalLettersAllowed));
-            length--;
-        }
-        return returnString.toString();
-    }
-
-    public String generateRandomStringCapitalLetters(Character startCharacter, Character endCharacter,
-                    Character[] exclusions) {
-        List<Object> capitalLettersInitialList = Arrays.asList(capitalLetters);
-        List<Object> capitalLettersList = Arrays.asList(capitalLetters);
-        int startCharacterascii = ((int) ((char) startCharacter));
-        int endCharacterascii = ((int) ((char) endCharacter));
-        for (Iterator iterator = capitalLettersInitialList.iterator(); iterator.hasNext();) {
-            int currentValue = (int) iterator.next();
-
-            if (currentValue < startCharacterascii || currentValue > endCharacterascii) {
-                capitalLettersList.remove(new Integer(currentValue));
-            }
-
-        }
-        List<Integer> exclusionsAsciiCodes = new ArrayList<>();
-        for (int i = 0; i < exclusions.length; i++) {
-            exclusionsAsciiCodes.add((int) exclusions[i]);
-        }
-        capitalLettersList.removeAll(exclusionsAsciiCodes);
-        char[] capitalLettersAllowed = new char[capitalLettersList.size()];
-
-        for (int i = 0; i < capitalLettersAllowed.length; i++) {
-            capitalLettersAllowed[i] = (char) ((int) capitalLettersList.get(i));
-        }
-        StringBuilder returnString = new StringBuilder();
-        int length = random.nextInt(20);
         while (length != 0) {
             returnString.append(RandomStringUtils.random(1, capitalLettersAllowed));
             length--;
@@ -414,43 +253,16 @@ public class AutomationRandomUtility {
         return RandomStringUtils.random(length, characterSet);
     }
 
-    public String generateRandomStringOutOfGivenCharacters(char... characterSet) {
-        return RandomStringUtils.random(random.nextInt(20), characterSet);
-    }
-
-    public String generateRandomStringOutOfGivenCharactersFromString(String characterSet) {
-        return RandomStringUtils.random(random.nextInt(20), characterSet);
-    }
-
     public String generateRandomStringOfNumbers(int length) {
         return RandomStringUtils.randomNumeric(length);
-    }
-
-    public String generateRandomStringOfNumbers() {
-        return RandomStringUtils.randomNumeric(random.nextInt(20));
     }
 
     public String generateRandomStringCapitalSmallMix(int length) {
         return RandomStringUtils.random(length, true, false);
     }
 
-    public String generateRandomStringCapitalSmallMix() {
-        return RandomStringUtils.random(random.nextInt(20), true, false);
-    }
-
-    public String generateRandomStringCapitalSmallMix(int length, Character[] exclusions) {
-
-        List<Object> allLettersList = Arrays.asList(allLetters);
-        List<Integer> exclusionsAsciiCodes = new ArrayList<>();
-        for (int i = 0; i < exclusions.length; i++) {
-            exclusionsAsciiCodes.add((int) exclusions[i]);
-        }
-        allLettersList.removeAll(exclusionsAsciiCodes);
-        char[] allLettersAllowed = new char[allLettersList.size()];
-
-        for (int i = 0; i < allLettersAllowed.length; i++) {
-            allLettersAllowed[i] = (char) ((int) allLettersList.get(i));
-        }
+    public String generateRandomStringCapitalSmallMix(int length, char[] exclusions) {
+        char[] allLettersAllowed = test(exclusions, allLetters);
         StringBuilder returnString = new StringBuilder();
         while (length != 0) {
             returnString.append(RandomStringUtils.random(1, allLettersAllowed));
@@ -458,29 +270,6 @@ public class AutomationRandomUtility {
         }
         return returnString.toString();
     }
-
-    public String generateRandomStringCapitalSmallMix(Character[] exclusions) {
-
-        List<Object> allLettersList = Arrays.asList(allLetters);
-        List<Integer> exclusionsAsciiCodes = new ArrayList<>();
-        for (int i = 0; i < exclusions.length; i++) {
-            exclusionsAsciiCodes.add((int) exclusions[i]);
-        }
-        allLettersList.removeAll(exclusionsAsciiCodes);
-        char[] allLettersAllowed = new char[allLettersList.size()];
-
-        for (int i = 0; i < allLettersAllowed.length; i++) {
-            allLettersAllowed[i] = (char) ((int) allLettersList.get(i));
-        }
-        StringBuilder returnString = new StringBuilder();
-        int length = random.nextInt(20);
-        while (length != 0) {
-            returnString.append(RandomStringUtils.random(1, allLettersAllowed));
-            length--;
-        }
-        return returnString.toString();
-    }
-
 
     public String generateRandomSentence(int length) {
         StringBuilder sentence = new StringBuilder();
@@ -489,42 +278,57 @@ public class AutomationRandomUtility {
         }
 
         return sentence.substring(0, length);
-
     }
 
-    public double getRandomDoubleBetweenRange(double min, double max, RoundingMode roundingMode, int scale) {
+    // public double getRandomDoubleBetweenRangeWith(double min, double max, RoundingMode roundingMode, int scale) {
+    // // RandomStringUtils.
+    // // return BigDecimal.valueOf((Math.random() * ((max - min) + 1)) + min).doubleValue();
+    //
+    // /*
+    // * return BigDecimal.valueOf((Math.random() * ((max - min) + 1)) + min).setScale(scale, roundingMode)
+    // * .doubleValue();
+    // */
+    // /*
+    // * StringBuilder as= new StringBuilder(); as.insert(index, str, offset, len) random.nextDouble();
+    // */
+    // return BigDecimal.valueOf((min + (max - min) * random.nextDouble())).setScale(scale, roundingMode)
+    // .doubleValue();
+    //
+    // }
 
-        return BigDecimal.valueOf((Math.random() * ((max - min) + 1)) + min).setScale(scale, roundingMode)
-                        .doubleValue();
+    public String getRandomDoubleBetweenRangeWithScale(double min, double max, int decimalPoint) {
+        if (max < min) {
+            throw new RandomGenerationAutomationException(
+                            "upper bound of the range should be greater then th elower bound");
+        }
+        DecimalFormat decimalFormater = new DecimalFormat("#.00");
+        decimalFormater.setMaximumIntegerDigits(330);
+        decimalFormater.setMaximumFractionDigits(330);
+        return String.format("%." + decimalPoint + "f", (min + ((max - min) * random.nextDouble())));
     }
 
-    public String generateRandomStringWithoutSpecialChars(int length) {
+    public String getRandomDoubleBetweenRange(double min, double max) {
+        if (max < min) {
+            throw new RandomGenerationAutomationException(
+                            "upper bound of the range should be greater then th elower bound");
+        }
+        DecimalFormat decimalFormatter = new DecimalFormat("#.#");
+        decimalFormatter.setMaximumIntegerDigits(330);
+        decimalFormatter.setMaximumFractionDigits(330);
+        return decimalFormatter.format((min + ((max - min) * random.nextDouble())));
+    }
+
+    public String generateRandomStringAlphaNumeric(int length) {
         return RandomStringUtils.random(length, true, true);
     }
 
-    public String generateRandomStringWithoutSpecialChars() {
-        return RandomStringUtils.random(random.nextInt(20), true, true);
-    }
-
-    public String generateRandomStringWithoutSpecialChars(int length, Character[] exclusions) {
-
-        List<Object> allLettersAndNumbersList = Arrays.asList(allLettersAndNumbers);
-        List<Integer> exclusionsAsciiCodes = new ArrayList<>();
-        for (int i = 0; i < exclusions.length; i++) {
-            exclusionsAsciiCodes.add((int) exclusions[i]);
-        }
-        allLettersAndNumbersList.removeAll(exclusionsAsciiCodes);
-        char[] allLettersAndNumbersAllowed = new char[allLettersAndNumbersList.size()];
-
-        for (int i = 0; i < allLettersAndNumbersAllowed.length; i++) {
-            allLettersAndNumbersAllowed[i] = (char) ((int) allLettersAndNumbersList.get(i));
-        }
+    public String generateRandomStringAlphaNumericWithExclusions(int length, char[] exclusions) {
+        char[] allLettersAndNumbersAllowed = test(exclusions, allLettersAndNumbers);
         return RandomStringUtils.random(length, allLettersAndNumbersAllowed);
     }
 
-    public String generateRandomStringWithoutSpecialChars(Character[] exclusions) {
-
-        List<Object> allLettersAndNumbersList = Arrays.asList(allLettersAndNumbers);
+    private char[] test(char[] exclusions, int[] asciiValues) {
+        List<Object> allLettersAndNumbersList = Arrays.asList(asciiValues);
         List<Integer> exclusionsAsciiCodes = new ArrayList<>();
         for (int i = 0; i < exclusions.length; i++) {
             exclusionsAsciiCodes.add((int) exclusions[i]);
@@ -535,68 +339,144 @@ public class AutomationRandomUtility {
         for (int i = 0; i < allLettersAndNumbersAllowed.length; i++) {
             allLettersAndNumbersAllowed[i] = (char) ((int) allLettersAndNumbersList.get(i));
         }
-        return RandomStringUtils.random(random.nextInt(20), allLettersAndNumbersAllowed);
+        return allLettersAndNumbersAllowed;
     }
 
-    public String generateRandomString(int length) {
-        return RandomStringUtils.random(length, characters);
-    }
-
-    public String generateRandomString() {
-        return RandomStringUtils.random(random.nextInt(20), characters);
-    }
-
-    public String generateRandomString(int length, Character[] exclusions) {
-
-        List<Object> allCharactersList = Arrays.asList(allCharacters);
-        List<Integer> exclusionsAsciiCodes = new ArrayList<>();
-        for (int i = 0; i < exclusions.length; i++) {
-            exclusionsAsciiCodes.add((int) exclusions[i]);
-        }
-        allCharactersList.removeAll(exclusionsAsciiCodes);
-        char[] allCharactersAllowed = new char[allCharactersList.size()];
-
-        for (int i = 0; i < allCharactersAllowed.length; i++) {
-            allCharactersAllowed[i] = (char) ((int) allCharactersList.get(i));
-        }
+    public String generateRandomStringEverything(int length) {
+        char[] allCharactersAllowed = test(new char[] {}, allCharacters);
         return RandomStringUtils.random(length, allCharactersAllowed);
     }
 
-    public String generateRandomString(Character[] exclusions) {
-
-        List<Object> allCharactersList = Arrays.asList(allCharacters);
-        List<Integer> exclusionsAsciiCodes = new ArrayList<>();
-        for (int i = 0; i < exclusions.length; i++) {
-            exclusionsAsciiCodes.add((int) exclusions[i]);
-        }
-        allCharactersList.removeAll(exclusionsAsciiCodes);
-        char[] allCharactersAllowed = new char[allCharactersList.size()];
-
-        for (int i = 0; i < allCharactersAllowed.length; i++) {
-            allCharactersAllowed[i] = (char) ((int) allCharactersList.get(i));
-        }
-        return RandomStringUtils.random(random.nextInt(20), allCharactersAllowed);
+    public String generateRandomStringEverythingWithExclusions(int length, char[] exclusions) {
+        char[] allCharactersAllowed = test(exclusions, allCharacters);
+        return RandomStringUtils.random(length, allCharactersAllowed);
     }
 
     public static void main(String[] args) {
+        AutomationRandomUtility obj = new AutomationRandomUtility();
+        /*
+         * int count = 0; for (int i = 0; i < 10000; i++) { int a = obj.generateRandomIntRangeWithExclusion(800, 8000,
+         * new int[] {1000}); System.out.println(a);
+         * 
+         * if (a < 800 || a > 8000) { System.out.println("galat"); count++; }
+         * 
+         * } System.out.println(count);
+         */
+        // System.out.println(obj.generateRandomStringSpecialCharacterWithExclusion(44, new char[]{'#','!','@'}));
+        // System.out.println(obj.generateRandomNumericStringWithExclusions(20, exclusions));
+
+        /*
+         * double random = new Random().nextDouble(); double SP = 0.0 + (random * (700.0 - 0.0)); SP =
+         * Double.parseDouble(String.format("%.6f", SP)); //now do format System.out.println(SP);
+         */
+        DecimalFormat dm = new DecimalFormat("#.#");
+        dm.setMaximumIntegerDigits(330);
+        dm.setMaximumFractionDigits(330);
+        System.out.println(dm.format(222213222.2112));
+        // System.out.println(Double.parseDouble(dm.format(22.2112)));
+        // int count = 0;
+        // for (int i = 0; i < 13600; i++) {
+        // String d = obj.getRandomDoubleBetweenRangeWithScale(1, 22, 2);
+        // /*
+        // * if (d < -2.05 || d > 7.98) { // System.out.println("fail: " + d); } else { count++; }
+        // */
+        // System.out.println(d);
+        //
+        // }
+        // System.out.println(count);
+
+        // System.out.println("asdsad" + java.util.Arrays.toString(new char[1]));
+        // char[] a = new char[] {};
+        // for (int i = 0; i < a.length; i++) {
+        // System.out.println("asd");
+        // System.out.println("'"+a[i]+"'");
+        // }
+        // Map<String, Map<String, String>> outer = new LinkedHashMap<>();
+        // Map<String, String> inner = new LinkedHashMap<>();
+        //
+        // AutomationProperties automationProperties = new AutomationProperties();
+        // String tokenPropertyNames =
+        // "body:{claimId=output.claim.claimId,exptime=output.claim.time}|header:{jti=output.claim.jti}|url:{param=variable.claim.jti}";
+        // String[] dgsdg = StringUtils.splitByWholeSeparator(tokenPropertyNames, "},");
+        // for (String f : dgsdg) {
+        // String[] bnghr = StringUtils.split(f, ":");
+        // String[] qwqw = bnghr[1].split("\\,");
+        // for (String ef : qwqw) {
+        // String[] ppoqw = ef.split("\\=");
+        //
+        // if (ppoqw[0].startsWith("{")) {
+        // ppoqw[0] = ppoqw[0].substring(1);
+        // }
+        //
+        // inner.put(ppoqw[0], ppoqw[1]);
+        // }
+        // outer.put(bnghr[0], inner);
+        // inner = new LinkedHashMap<>();
+        // }
+        // System.out.println(outer);
+        //
+        // char[] temp = tokenPropertyNames.toCharArray();
+        // int start = 0, end = 0;
+        // int i = 0;
+        // String outerKey = "", innerKey = "", innerValue = "";
+        //
+        // while (i < temp.length) {
+        // if (temp[i] == ':') {
+        // outerKey = tokenPropertyNames.substring(start == 0 ? start : start + 1, i);
+        // } else if (temp[i] == '{') {
+        // start = i + 1;
+        // } else if (temp[i] == '=') {
+        // end = i;
+        // innerKey = tokenPropertyNames.substring(start, end);
+        // start = i + 1;
+        // } else if (temp[i] == ',') {
+        // end = i;
+        // innerValue = tokenPropertyNames.substring(start, end);
+        // inner.put(innerKey, innerValue);
+        // start = i + 1;
+        // } else if (temp[i] == '}') {
+        // end = i;
+        // innerValue = tokenPropertyNames.substring(start, end);
+        // inner.put(innerKey, innerValue);
+        // outer.put(outerKey, inner);
+        // inner = new HashMap<>();
+        // start = i + 1;
+        // }
+        // i++;
+        // }
+        //
+        //
+        // Set<String> outerKeySet = outer.keySet();
+        // for (String outerKeyKey : outerKeySet) {
+        // System.out.println("\n\nouterKey: " + outerKeyKey);
+        // Map<String, String> innerMap = outer.get(outerKeyKey);
+        // Set<String> innerKeySet = innerMap.keySet();
+        // for (String innerKeyKey : innerKeySet) {
+        // System.out.print(innerKeyKey + ":" + innerMap.get(innerKeyKey) + ",");
+        // }
+        // }
+        // System.out.println();
+        // System.out.println();
+        // System.out.println(outer);
+    }
+
+    public static void print() {
         AutomationRandomUtility obj = new AutomationRandomUtility();
         System.out.println("-*-*-*-*-*-*-*-*-*-*-*-Examples Start-*-*-*-*-*-*-*-*-*-*-*-");
         System.out.println();
         System.out.println();
         System.out.println("-------Special Characters Start---------");
-        System.out.println(obj.generateRandomSpecialCharacter(5, '%'));
+        // System.out.println(obj.generateRandomSpecialCharacter(5, '%'));
         System.out.println(obj.generateRandomSpecialCharacter(5));
-        System.out.println(obj.generateRandomSpecialCharacter());
-        System.out.println(obj.generateRandomSpecialCharacters(22, new Character[] {'*', '/'}));
-        System.out.println(obj.generateRandomSpecialCharacters(new Character[] {'*', '/'}));
+        System.out.println(obj.generateRandomSpecialCharacters(22, new char[] {'*', '/'}));
         System.out.println("-------Special Characters End---------");
         System.out.println();
         System.out.println();
         System.out.println("-------Integers  Start---------");
         System.out.println(obj.generateRandomInt());
         System.out.println(obj.generateRandomInt(22));
-        System.out.println(obj.generateRandomInt(22, 77));
-        System.out.println(obj.generateRandomInt(22, 44, new int[] {23, 25, 33, 42}));
+        System.out.println(obj.generateRandomIntRange(22, 77));
+        System.out.println(obj.generateRandomIntRangeWithExclusion(-22, 23, new int[] {23}));
         System.out.println("-------Integers End---------");
         System.out.println();
         System.out.println();
@@ -604,45 +484,37 @@ public class AutomationRandomUtility {
         System.out.println(obj.generateRandomStringCapitalLetters());
         System.out.println(obj.generateRandomStringCapitalLetters(12));
         System.out.println(obj.generateRandomStringCapitalLetters(12, 'A'));
-        System.out.println(obj.generateRandomStringCapitalLetters(14, 'A', 'L'));
-        System.out.println(obj.generateRandomStringCapitalLetters(12, new Character[] {'A', 'C', 'L'}));
-        System.out.println(obj.generateRandomStringCapitalLetters(new Character[] {'A', 'C', 'L'}));
-        System.out.println(obj.generateRandomStringCapitalLetters(22, 'F', 'T', new Character[] {'G', 'J', 'L'}));
-        System.out.println(obj.generateRandomStringCapitalLetters('F', 'T', new Character[] {'G', 'J', 'L'}));
+        System.out.println(obj.generateRandomStringCapitalLettersRange(14, 'A', 'L'));
+        System.out.println(obj.generateRandomStringCapitalLettersRangeWithExclusion(22, 'F', 'T',
+                        new char[] {'G', 'J', 'L'}));
         System.out.println("-------Capital Letters End---------");
         System.out.println();
         System.out.println();
         System.out.println("-------Small Letters  Start---------");
-        System.out.println(obj.generateRandomStringSmallLetters());
-        System.out.println(obj.generateRandomStringSmallLetters(12));
-        System.out.println(obj.generateRandomStringSmallLetters(12, 'a'));
-        System.out.println(obj.generateRandomStringSmallLetters(14, 'b', 'k'));
-        System.out.println(obj.generateRandomStringSmallLetters(21, new Character[] {'a', 'c', 'l'}));
-        System.out.println(obj.generateRandomStringSmallLetters(new Character[] {'a', 'c', 'l'}));
-        System.out.println(obj.generateRandomStringSmallLetters(21, 'f', 't', new Character[] {'g', 'j', 'l'}));
-        System.out.println(obj.generateRandomStringSmallLetters('f', 't', new Character[] {'g', 'j', 'l'}));
+        System.out.println(obj.generateRandomStringSmallLetters(34));
+        // System.out.println(obj.generateRandomStringSmallLetters(12, 'a'));
+        System.out.println(obj.generateRandomStringSmallLettersRange(14, 'b', 'k'));
+        System.out.println(obj.generateRandomStringSmallLettersWithExclusion(21, new char[] {'a', 'c', 'l'}));
+        System.out.println(obj.generateRandomStringSmallLettersRangeWithExclusion(21, 'f', 't',
+                        new char[] {'g', 'j', 'l'}));
         System.out.println("-------Small Letters End---------");
         System.out.println();
         System.out.println();
         System.out.println("-------Random String Out Of Given Characters Start---------");
         System.out.println(obj.generateRandomStringOutOfGivenCharacters('a', 'c', 'U'));
         System.out.println(obj.generateRandomStringOutOfGivenCharacters(33, 'J', 'n', 'M'));
-        System.out.println(obj.generateRandomStringOutOfGivenCharactersFromString("AxDTk"));
         System.out.println(obj.generateRandomStringOutOfGivenCharactersFromString(44, "AxDTk"));
         System.out.println("-------Random String Out Of Given Characters End---------");
         System.out.println();
         System.out.println();
         System.out.println("-------Random String of Numbers  Start---------");
-        System.out.println(obj.generateRandomStringOfNumbers());
         System.out.println(obj.generateRandomStringOfNumbers(14));
         System.out.println("-------Random String of Numbers End---------");
         System.out.println();
         System.out.println();
         System.out.println("-------Random String CapitalSmallMix  Start---------");
-        System.out.println(obj.generateRandomStringCapitalSmallMix());
         System.out.println(obj.generateRandomStringCapitalSmallMix(33));
-        System.out.println(obj.generateRandomStringCapitalSmallMix(33, new Character[] {'g', 'G', 'l', 'S'}));
-        System.out.println(obj.generateRandomStringCapitalSmallMix(new Character[] {'g', 'G', 'l', 'S'}));
+        System.out.println(obj.generateRandomStringCapitalSmallMix(33, new char[] {'g', 'G', 'l', 'S'}));
         System.out.println("-------Random String CapitalSmallMix End---------");
         System.out.println();
         System.out.println();
@@ -652,27 +524,33 @@ public class AutomationRandomUtility {
         System.out.println();
         System.out.println();
         System.out.println("-------Double  Start---------");
-        System.out.println(obj.getRandomDoubleBetweenRange(2.05, 7.98, RoundingMode.FLOOR, 5));
+        System.out.println(obj.getRandomDoubleBetweenRange(2.05, 7.98));
         System.out.println("-------Double End---------");
         System.out.println();
         System.out.println();
         System.out.println("------ String Without Special Chars Start----------");
-        System.out.println(obj.generateRandomStringWithoutSpecialChars());
-        System.out.println(obj.generateRandomStringWithoutSpecialChars(22));
-        System.out.println(obj.generateRandomStringWithoutSpecialChars(new Character[] {'g', 'G', 'l', 'S', '3', '7'}));
-        System.out.println(obj.generateRandomStringWithoutSpecialChars(23,
-                        new Character[] {'g', 'G', 'l', 'S', '3', '7'}));
+        System.out.println(obj.generateRandomStringAlphaNumeric(22));
+        System.out.println(obj.generateRandomStringAlphaNumericWithExclusions(23,
+                        new char[] {'g', 'G', 'l', 'S', '3', '7'}));
         System.out.println("-------String Without Special Chars End---------");
         System.out.println();
         System.out.println();
         System.out.println("------ Random String Start----------");
-        System.out.println(obj.generateRandomString());
-        System.out.println(obj.generateRandomString(12));
-        System.out.println(obj.generateRandomString(new Character[] {'g', 'G', 'l', 'S', '3', '7', '%', '?'}));
-        System.out.println(obj.generateRandomString(15, new Character[] {'g', 'G', 'l', 'S', '3', '7', '%', '?'}));
+        System.out.println(obj.generateRandomStringEverything(12));
+        System.out.println(obj.generateRandomStringEverythingWithExclusions(15,
+                        new char[] {'g', 'G', 'l', 'S', '3', '7', '%', '?'}));
         System.out.println("-------Random String End---------");
         System.out.println();
         System.out.println();
         System.out.println("-*-*-*-*-*-*-*-*-*-*-*-Examples End-*-*-*-*-*-*-*-*-*-*-*-");
+    }
+
+    public static void abc(char... a) {
+        System.out.println("jhinga");
+    }
+
+    public static void abc(char a) {
+        System.out.println("nahi");
+
     }
 }
